# lp2

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  run_step.py  setup.py
.github/workflows/: ci.yml  impactguard.yml  pypi-publish.yml
docs/: SPEC.md
examples/: bubble_sort.py  demo_bubble_sort_roundtrip.py  demo_factorial_roundtrip.py  demo_fermat_roundtrip.py  demo_fibonacci_roundtrip.py  demo_quicksort_roundtrip.py  demo_theorem_transpilation.py  demo_yield_roundtrip.py  factorial_algorithms.lean  factorial_algorithms.py  factorial_algorithms_test.py  fermat.lean  fermat.py  quicksort.py  simple_while.py  theorem_transpilation_demo.py  yield_example.py
lp2/: cli.py
lp2/ast/: __init__.py
lp2/codegen/: lean4_codegen.py  python_codegen.py
lp2/parser/: lean_lexer.py  lean_parser.py  python_parser.py
lp2/transpiler/: lean4_to_python.py  python_to_lean4.py
src/lp2/: __init__.py  __main__.py  cli.py
src/lp2/ast/: __init__.py  lean4_ast.py  python_ast.py
src/lp2/codegen/: lean4_codegen.py  python_codegen.py
src/lp2/parser/: lean_lexer.py  lean_parser.py  python_parser.py
src/lp2/transpiler/: lean4_to_python.py  python_to_lean4.py
tests/: conftest.py  test_adversary.py  test_bug_fixes.py  test_cli.py  test_coverage.py  test_lean2py.py  test_py2lean.py  test_roundtrip.py
