[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lp2"
version = "0.1.2"
description = "Bidirectional Lean4-Python transpiler"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
    "impactguard",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "hypothesis",
]
lint = [
    "prospector[with_ruff,with_mypy]",
    "semgrep",
    "vulture",
    "impactguard",
]
all = ["lp2[dev,test,lint]"]

[project.scripts]
lp2 = "lp2.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/lp2"
Repository = "https://github.com/daedalus/lp2"
Issues = "https://github.com/daedalus/lp2/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lp2"]

[tool.hatch.build.targets.sdist]
include = ["src/lp2"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "F405", "F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"lean4_codegen.py" = ["ARG001", "N802"]
"python_codegen.py" = ["ARG001", "N802", "ANN001", "ANN202"]
"python_parser.py" = ["ARG001", "N802"]
"python_to_lean4.py" = ["ANN001", "ARG001"]
"lean_parser.py" = ["ANN202", "ANN204", "F841"]
"lean_lexer.py" = ["ANN204", "ARG002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["lp2.parser.*", "lp2.codegen.*", "lp2.transpiler.*"]
disable_error_code = [
    "arg-type", "return-value", "misc", "assignment",
    "no-untyped-def", "union-attr", "operator", "index",
    "no-untyped-call", "no-redef", "has-type", "call-overload",
    "var-annotated", "list-item", "unused-ignore", "attr-defined",
]

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
ruff = true
mypy = true
pylint = true
pyflakes = false
pycodestyle = false
mccabe = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
